--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3.8"
 services:
   fastapi-nano:
-    container_name: "fastapi-nano"
-    image: "fastapi-nano:latest"
+    container_name: "python-template"
+    image: "python-template:latest"
     env_file:
       - .env
     build:
       context: ./
       dockerfile: Dockerfile
       labels:
-        - fastapi-nano
+        - python-template
     volumes:
         - .:/code
     ports:
